Fixed landing page and blogs list overflow

--- a/src/app/blogs-list/blogs-list.component.scss
+++ b/src/app/blogs-list/blogs-list.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
-  margin-top: 64px;
-  min-height: calc(100vh - 64px - 100px);
+  padding-top: 64px;
+  min-height: calc(100vh - 64px - 102px);
 }
 
 .add-btn {
