--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -13,6 +13,7 @@
   left: 0;
   bottom: 0;
   right: 0;
+  overflow: hidden;
 }
 
 .banner-image {
@@ -28,10 +29,15 @@
   color: white;
   background-color: rgb(0, 0, 0, 0.4);
   border-radius: 4px;
-  font-size: 60px;
   position: absolute;
   bottom: 20%;
   left: 10%;
   padding-left: 8px;
   padding-right: 8px;
+  padding-bottom: 8px;
+
+  .text {
+    font-size: 60px;
+    line-height: normal;
+  }
 }
